// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useLoadSuite > Calling useLoadSuite should resume from loaded state 1`] = `
{
  "$type": "Suite",
  "abortController": AbortController {},
  "allowReorder": undefined,
  "children": [
    {
      "$type": "Focused",
      "abortController": AbortController {},
      "allowReorder": undefined,
      "children": null,
      "data": {
        "focusMode": 0,
        "match": [],
        "matchAll": false,
      },
      "key": null,
      "keys": null,
      "output": undefined,
      "parent": [Circular],
      "status": "DONE",
    },
    {
      "$type": "Focused",
      "abortController": AbortController {},
      "allowReorder": undefined,
      "children": null,
      "data": {
        "focusMode": 1,
        "match": [
          "t5",
        ],
        "matchAll": false,
      },
      "key": null,
      "keys": null,
      "output": undefined,
      "parent": [Circular],
      "status": "DONE",
    },
    {
      "$type": "Test",
      "abortController": AbortController {},
      "allowReorder": undefined,
      "children": null,
      "data": {
        "fieldName": "t1",
        "severity": "error",
        "testFn": [Function],
      },
      "key": null,
      "keys": null,
      "output": undefined,
      "parent": [Circular],
      "status": "FAILED",
    },
    {
      "$type": "Group",
      "abortController": AbortController {},
      "allowReorder": undefined,
      "children": [
        {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t2",
            "message": "t2 message",
            "severity": "error",
            "testFn": [Function],
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "FAILED",
        },
        {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t3",
            "severity": "error",
            "testFn": [Function],
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "PASSING",
        },
        {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t4",
            "severity": "warning",
            "testFn": [Function],
          },
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "WARNING",
        },
      ],
      "data": {
        "groupName": "g1",
      },
      "key": null,
      "keys": null,
      "output": undefined,
      "parent": [Circular],
      "status": "DONE",
    },
    {
      "$type": "Test",
      "abortController": AbortController {},
      "allowReorder": undefined,
      "children": null,
      "data": {
        "fieldName": "t5",
        "severity": "error",
        "testFn": [Function],
      },
      "key": null,
      "keys": null,
      "output": undefined,
      "parent": [Circular],
      "status": "SKIPPED",
    },
    {
      "$type": "Each",
      "abortController": AbortController {},
      "allowReorder": true,
      "children": [
        {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t6",
            "severity": "error",
            "testFn": [Function],
          },
          "key": "a",
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "FAILED",
        },
        {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t6",
            "severity": "error",
            "testFn": [Function],
          },
          "key": "b",
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "FAILED",
        },
      ],
      "data": {},
      "key": null,
      "keys": {
        "a": {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t6",
            "severity": "error",
            "testFn": [Function],
          },
          "key": "a",
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "FAILED",
        },
        "b": {
          "$type": "Test",
          "abortController": AbortController {},
          "allowReorder": undefined,
          "children": null,
          "data": {
            "fieldName": "t6",
            "severity": "error",
            "testFn": [Function],
          },
          "key": "b",
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "FAILED",
        },
      },
      "output": undefined,
      "parent": [Circular],
      "status": "DONE",
    },
  ],
  "data": {
    "optional": {},
    "resolver": [Function],
  },
  "key": null,
  "keys": null,
  "output": SuiteSummary {
    "dump": [Function],
    "errorCount": 4,
    "errors": [
      SummaryFailure {
        "fieldName": "t1",
        "groupName": undefined,
        "message": undefined,
      },
      SummaryFailure {
        "fieldName": "t2",
        "groupName": "g1",
        "message": "t2 message",
      },
      SummaryFailure {
        "fieldName": "t6",
        "groupName": undefined,
        "message": undefined,
      },
      SummaryFailure {
        "fieldName": "t6",
        "groupName": undefined,
        "message": undefined,
      },
    ],
    "getError": [Function],
    "getErrors": [Function],
    "getErrorsByGroup": [Function],
    "getMessage": [Function],
    "getWarning": [Function],
    "getWarnings": [Function],
    "getWarningsByGroup": [Function],
    "groups": {
      "g1": {
        "t2": SummaryBase {
          "errorCount": 1,
          "errors": [
            "t2 message",
          ],
          "pendingCount": 0,
          "testCount": 1,
          "warnCount": 0,
          "warnings": [],
        },
        "t3": SummaryBase {
          "errorCount": 0,
          "errors": [],
          "pendingCount": 0,
          "testCount": 1,
          "warnCount": 0,
          "warnings": [],
        },
        "t4": SummaryBase {
          "errorCount": 0,
          "errors": [],
          "pendingCount": 0,
          "testCount": 1,
          "warnCount": 1,
          "warnings": [],
        },
      },
    },
    "hasErrors": [Function],
    "hasErrorsByGroup": [Function],
    "hasWarnings": [Function],
    "hasWarningsByGroup": [Function],
    "isPending": [Function],
    "isTested": [Function],
    "isValid": [Function],
    "pendingCount": 0,
    "suiteName": undefined,
    "testCount": 6,
    "tests": {
      "t1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "t2": SummaryBase {
        "errorCount": 1,
        "errors": [
          "t2 message",
        ],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "t3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": true,
        "warnCount": 0,
        "warnings": [],
      },
      "t4": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": true,
        "warnCount": 1,
        "warnings": [],
      },
      "t5": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "t6": {
        "errorCount": 2,
        "errors": [],
        "pendingCount": 0,
        "testCount": 2,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "valid": false,
    "warnCount": 1,
    "warnings": [
      SummaryFailure {
        "fieldName": "t4",
        "groupName": "g1",
        "message": undefined,
      },
    ],
  },
  "parent": null,
  "status": "DONE",
}
`;

exports[`useLoadSuite > Calling useLoadSuite should resume from loaded state 2`] = `
SuiteSummary {
  "dump": [Function],
  "errorCount": 4,
  "errors": [
    SummaryFailure {
      "fieldName": "t1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "t2",
      "groupName": "g1",
      "message": "t2 message",
    },
    SummaryFailure {
      "fieldName": "t6",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "t6",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "t2": SummaryBase {
        "errorCount": 1,
        "errors": [
          "t2 message",
        ],
        "pendingCount": 0,
        "testCount": 1,
        "warnCount": 0,
        "warnings": [],
      },
      "t3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "warnCount": 0,
        "warnings": [],
      },
      "t4": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "warnCount": 1,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 6,
  "tests": {
    "t1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "t2": SummaryBase {
      "errorCount": 1,
      "errors": [
        "t2 message",
      ],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "t3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
    "t4": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": true,
      "warnCount": 1,
      "warnings": [],
    },
    "t5": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "t6": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 1,
  "warnings": [
    SummaryFailure {
      "fieldName": "t4",
      "groupName": "g1",
      "message": undefined,
    },
  ],
}
`;
